# clipper

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  dockerup.sh  pyproject.toml
bindings/python/: CMakeLists.txt
examples/python/: bunny_test.py  clique_analysis.py
src/clipper/: burer_monteiro.py  clipper.py  rank_reduction.py  utils.py
test/: test_bm.py  test_clipper.py
